<resources>
    <string name="google_maps_key">AIzaSyCdtAvxituIIoR0RkgSxdFF4qRKyJP13yA</string>
    <string name="facebook_app_id">522409934624553</string>
    <string name="fb_login_protocol_scheme">fb211984723419013</string>
    <string name="app_name">WhrzAt</string>
    <string name="Dont_have_an_account">Don’t have an account? <b><font color="#E74C3C">Sign Up</font></b></string>
    <string name="have_an_account">Already have an account? <b><font color="#E74C3C">Login</font></b></string>
    <string name="by_signing_in_you_agree_with_our_terms_conditions">By signing in you agree with our <b><font size="14">Terms &amp; Conditions</font></b></string>
    <string name="label_sign_up">Sign Up</string>
    <string name="label_login">Login</string>
    <string name="label_find_out_the_best_places_to_go_and_catch_n_up_with_your_friend">
        Explore with WhrzAt to find exciting live activity and share places to go</string>
    <string name="label_discover_hotspot">Discover Hotspot</string>
    <string name="label_email">Email</string>
    <string name="label_password">Password</string>
    <string name="label_forgot_password">Forgot Password?</string>
    <string name="label_log_in">Log in</string>
    <string name="label_back">Back</string>
    <string name="label_Sign_Up">Continue</string>
    <string name="label_fullname">Full Name</string>
    <string name="label_mobile_no">Mobile</string>
    <string name="label_cancel">Cancel</string>
    <string name="label_create">Create</string>
    <string name="label_add_hotspot">Add Hotspot</string>
    <string name="explore">Home</string>
    <string name="feed">Feeds</string>
    <string name="label_add">Add</string>
    <string name="label_profile">Profile</string>
    <string name="label_chat">Chat</string>
    <string name="label_no_new_notification">No New Notification</string>
    <string name="error_invalid_email">Invalid email</string>
    <string name="label_map">Map</string>
    <string name="label_list">List</string>
    <string name="error_invalid_password">Invalid Password</string>
    <string name="error_invalid_contact">Invalid Mobile Number</string>
    <string name="str_first_name">First name</string>
    <string name="str_last_name">Last name</string>
    <string name="Phone_num">Phone number</string>
    <string name="label_Bio">Bio</string>
    <string name="label_Bio_opt">Bio (Optional)</string>
    <string name="label_referral">Referral Code (Optional)</string>
    <string name="error_empty_fname">First name is empty.</string>
    <string name="error_server_busy">Server is not responding</string>
    <string name="dialog_session_has_been_expired">Session Expired</string>
    <string name="dialog_user_deleted">User has been deleted.</string>
    <string name="dialog_delete_profile">Your profile has been deleted.</string>
    <string name="error_password_empty">Password can not be empty</string>
    <string name="error_otp_empty">Please enter verification code</string>
    <string name="error_email_empty">Email can not be empty</string>
    <string name="error_no_connection">No Internet</string>
    <string name="label_hotspot_name">Hotspot Name</string>
    <string name="label_description">Description</string>
    <string name="label_tags_bar_cricket_playground_coffee_shop">Tags (Bar, Playground, Cafe etc)</string>
    <string name="error_empty_spot_name">Please enter the Hotspot name</string>
    <string name="error_empty_description">Please enter the description</string>
    <string name="error_image">Please upload the image</string>
    <string name="error_no_address">No Address</string>
    <string name="success_created">Successfully Created</string>
    <string name="error_fb_login">Error in login</string>
    <string name="label_event_name">Event Name</string>
    <string name="label_end">End Time</string>
    <string name="label_start">Start Time</string>
    <string name="label_add_Event">Add Event</string>
    <string name="label_photos">Add Photos</string>
    <string name="label_add_event">Add Event</string>
    <string name="label_fav_event">Favorite</string>
    <string name="label_unfav_event">Unfavorite</string>
    <string name="label_check_in">CheckIn</string>
    <string name="label_report">Report</string>
    <string name="label_chill">Chill</string>
    <string name="label_very_popular">It\'s Lit</string>
    <string name="label_popular">Popular</string>
    <string name="label_Just_in">Just In</string>
    <string name="label_no_photos">No Photos</string>
    <string name="label_checkout">CheckOut</string>
    <string name="label_events_at">Events at</string>
    <string name="label_check_out">CheckOut</string>
    <string name="label_walk_1_top">Discover popular \n hotspots around you</string>
    <string name="label_wak_1_bottom">Explore with WhrzAt to find exciting live \n activity as well as share places to go</string>
    <string name="label_walk_2_top">Checkin, upload and share \n with contacts</string>
    <string name="label_wak_2_bottom">Upload photos (which disappear after \n 12hrs) and create events at any place you \n wish!</string>
    <string name="label_walk_3_top">Check what your \n friends are up to</string>
    <string name="label_wak_3_bottom">See where your friends have been with \n friend\'s feed!</string>
    <string name="lable_events_created">Event Created Successfully</string>
    <string name="success_images">Image uploaded successfully</string>
    <string name="success_created_event">Event Added Successfully</string>
    <string name="success_check_out">Checkout Successful</string>
    <string name="success_check_in">Checkin Successful</string>
    <string name="success_password">Password reset instruction successfully sent to your email address.</string>
    <string name="label_don_t_worry_just_fill_your_email_and_we_will_help_you_reset_your_password">Don\'t worry! just fill your email and we will help you reset your password</string>
    <string name="label_email_id">Email</string>
    <string name="label_send_email">Send Email</string>
    <string name="error_empty_email">Email is empty</string>
    <string name="label_signup">Sign Up</string>
    <string name="error_checkin_area">You must be located near the hotspot</string>
    <string name="label_settings">Settings</string>
    <string name="label_edit_profile">Edit Profile</string>
    <string name="label_Notificaitons">Notifications</string>
    <string name="label_blocked">Blocked Contacts</string>
    <string name="label_feed">Feeds</string>
    <string name="label_radius">Hotspot Radius</string>
    <string name="label_help"><![CDATA[Help & Support]]></string>
    <string name="label_contacts">Sync Contacts</string>
    <string name="label_log_out">Log out</string>
    <string name="label_delete_acc">Delete Profile</string>
    <string name="dialog_log_out">Do you want to log out?</string>
    <string name="error_checin_first">You need to checkin first</string>
    <string name="error_enter_time">Enter the event time</string>
    <string name="success">success</string>
    <string name="label_about">About</string>
    <string name="label_write_your_message">Write your message</string>
    <string name="label_send">Send</string>
    <string name="label_no_message">Send message  to start communication</string>
    <string name="label_search">Search by tags, events…</string>
    <string name="label_new_chat_message">New chat message</string>
    <string name="label_daily_spot">Daily hotspot</string>
    <string name="label_loves_photo">When someone loves your photo</string>
    <string name="label_popular_photo">When your photo is popular</string>
    <string name="label_visted_place">When someone posts a picture or event to a favorite spot</string>
    <string name="label_contact_create">When your contact creates a new hotspot</string>
    <string name="label_blocked_contacts">Blocked Contacts</string>
    <string name="label_Events_at_hotspot">Events at this Hotspot</string>
    <string name="label_Events_at_hotspot_1">Event at this Hotspot</string>
    <string name="labl_no_events_spot">No Events at this Hotspot</string>
    <string name="success_reported">Successfully reported</string>
    <string name="label_save">Save</string>
    <string name="label_sucess_edt_profile">Profile Successfully Edited</string>
    <string name="label_fetching_contacts">Fetching contacts</string>
    <string name="success_delete_api">Image deleted successfully</string>
    <string name="label_deleted">Delete</string>
    <string name="label_choose_country">Choose Your Country</string>
    <string name="hint_search">Search</string>
    <string name="error_upload_image">Please upload image</string>
    <string name="label_no_feed">No Feeds</string>
    <string name="label_no_hotspot_found">No hotspots found</string>
    <string name="label_report_success">Successfully Reported</string>
    <string name="label_block">Block</string>
    <string name="lable_block">Block</string>
    <string name="label_unblock">Unblock</string>
    <string name="success_contacts">Contacts synced successfully</string>
    <string name="label_checked_in">checked in at</string>
    <string name="label_no_limit">Infinty</string>
    <string name="label_settings_text">Switch on feeds in settings to see what your friends are up to.</string>
    <string name="label_distance_range">Distance Range</string>
    <string name="label_0_miles">0</string>
    <string name="label_100_miles">100</string>
    <string name="error_enter_start_time">Enter start time</string>
    <string name="label_no_activity">No activity</string>
    <string name="label_Infinity">Infinity</string>
    <string name="error_delet_last_item">Last image can not be deleted</string>
    <string name="dialog_do_you_want_to_delete">Do you want to delete this image?</string>
    <string name="label_infinity">Infinity</string>
    <string name="label_no_data">No data</string>
    <string name="label_need_to_checkin">You need to checkin first to create event.</string>
    <string name="label_need_to_checkin_add">You need to checkin first to add event.</string>
    <string name="dialog_do_you_want_to_logout">Do you want to logout from the app?</string>
    <string name="dialog_do_you_want_to_delete_profile">Do you want to delete profile?</string>
    <string name="label_notification">No notifications</string>
    <string name="label_delete">Delete</string>
    <string name="label_no_chat">No recent chat</string>
    <string name="kabel_delete">Delete</string>
    <string name="error_delete">Deleted Successfully</string>
    <string name="label_name">Name</string>
    <string name="label_phone_no">Phone no</string>
    <string name="error_enter_name">Enter your name</string>
    <string name="error_bio">Enter your bio</string>
    <string name="error_contact">Enter your contact</string>
    <string name="label_tags_optional">Tags (Optional)</string>
    <string name="no_blocked_contacts">No blocked contacts</string>
    <string name="error_empty_lname">Last name is empty</string>
    <string name="error_empty_bio">Bio is empty</string>
    <string name="label_no_more_spot">No more hotspot</string>
    <string name="error_empty_password">Password is empty</string>
    <string name="error_empty_contact">Enter your phone number</string>
    <string name="error_limit_password">Password length must be greater than 6 characters</string>
    <string name="label_terms_policy">Terms &amp; Policy</string>
    <string name="dialog_allow_permission_from_setting">Allow contacts permission from settings</string>
    <string name="str_permission_contacts_1">To see feeds please allow</string>
    <string name="str_permission_contacts_2">to access your Contacts.</string>
    <string name="str_open_setting_contacts"><![CDATA[Tap Settings > Permissions, and turn Contacts on.]]></string>
    <string name="swipe_left_to_delete_the_chat">Swipe left to delete the chat</string>
</resources>