<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/tvExploreMenu"
        android:enabled="true"
        android:icon="@drawable/ic_home"
        android:title="@string/explore"/>
    <item
        android:id="@+id/tvFeedMenu"
        android:enabled="false"
        android:visible="false"
        android:icon="@drawable/tab_feed_icon"
        android:title="@string/feed"/>
    <item
        android:id="@+id/tvAddMenu"
        android:enabled="true"
        android:icon="@drawable/ic_add"
        android:title="@string/label_add"/>
    <item
        android:id="@+id/tvChatMenu"
        android:enabled="true"
        android:icon="@drawable/ic_chat"
        android:title="@string/label_chat"/>
    <item
        android:id="@+id/tvProfileMenu"
        android:enabled="true"
        android:icon="@drawable/ic_profile"
        android:title="@string/label_profile"/>
</menu>
