<?xml version="1.0" encoding="utf-8"?>
<layout>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:id="@+id/llMain"
    android:clickable="true"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/white"
        android:elevation="@dimen/dp_4"
        app:contentInsetLeft="0dp"
        app:contentInsetStart="0dp">


        <ImageView
            android:id="@+id/tvBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"
            android:padding="@dimen/dp_16"
            app:srcCompat="@drawable/ic_baseline_arrow_back_24"
            />


        <TextView
            android:id="@+id/tvTitle"
           android:fontFamily="@font/opensans_semibold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/label_Notificaitons"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_20" />

        <TextView
            android:id="@+id/tvSave"
            android:fontFamily="@font/opensans_semibold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:background="?selectableItemBackground"
            android:padding="@dimen/dp_16"
            android:text="@string/label_save"
            android:textColor="@color/red_create"
            android:textSize="17sp" />
    </androidx.appcompat.widget.Toolbar>


    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/sbNewMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?selectableItemBackground"
        android:padding="@dimen/dp_16"
        android:textSize="@dimen/sp_16"
        android:fontFamily="@font/opensans_regular"
        android:textColor="@color/black"
        android:text="@string/label_new_chat_message" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/sbHotspot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?selectableItemBackground"
        android:padding="@dimen/dp_16"
        android:textSize="@dimen/sp_16"
        android:fontFamily="@font/opensans_regular"
        android:textColor="@color/black"
        android:text="@string/label_daily_spot" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/sblovesPhoto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?selectableItemBackground"
        android:padding="@dimen/dp_16"
        android:textSize="@dimen/sp_16"
        android:fontFamily="@font/opensans_regular"
        android:textColor="@color/black"
        android:text="@string/label_loves_photo" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/sbPopularPhoto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?selectableItemBackground"
        android:padding="@dimen/dp_16"
        android:textSize="@dimen/sp_16"
        android:fontFamily="@font/opensans_regular"
        android:textColor="@color/black"
        android:text="@string/label_popular_photo" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/sbPreviousPlace"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?selectableItemBackground"
        android:padding="@dimen/dp_16"
        android:textSize="@dimen/sp_16"
        android:fontFamily="@font/opensans_regular"
        android:textColor="@color/black"
        android:text="@string/label_visted_place" />


    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/sbContactCreate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?selectableItemBackground"
        android:padding="@dimen/dp_16"
        android:textSize="@dimen/sp_16"
        android:fontFamily="@font/opensans_regular"
        android:textColor="@color/black"
        android:text="@string/label_contact_create" />

</LinearLayout>
</layout>