<?xml version="1.0" encoding="utf-8"?>
<layout>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/ivCross"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/red_create"
        app:srcCompat="@drawable/ic_cross"
        android:padding="@dimen/dp_16" />


    <TextView
        android:id="@+id/tvLoginTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_margin="@dimen/dp_16"
        android:text="@string/label_forgot_password"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_16" />


    <TextView
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ivCross"
        android:layout_marginEnd="@dimen/dp_36"
        android:layout_marginStart="@dimen/dp_36"
        android:text="@string/label_don_t_worry_just_fill_your_email_and_we_will_help_you_reset_your_password"
        android:textSize="@dimen/sp_16" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text"
        android:layout_marginEnd="@dimen/dp_36"
        android:layout_marginStart="@dimen/dp_36"
        android:layout_marginTop="@dimen/dp_24"
        android:textColorHint="@color/lightGrey">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:backgroundTint="@color/lightGrey"
            android:hint="@string/label_email_id"
            android:inputType="textEmailAddress"
            android:maxLength="30"
            android:maxLines="1"
            android:paddingBottom="@dimen/dp_16"
            android:textColor="@color/black"
            android:textColorHint="@color/lightGrey" />

    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/tvSendEmail"
        android:fontFamily="@font/avenirltstd_bold"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_48"
        android:layout_below="@+id/tilEmail"
        android:layout_marginBottom="@dimen/dp_16"
        android:layout_marginEnd="@dimen/dp_36"
        android:layout_marginStart="@dimen/dp_36"
        android:layout_marginTop="@dimen/dp_36"
        android:background="@drawable/baundary_login"
        android:gravity="center"
        android:text="@string/label_send_email"
        android:textColor="@android:color/white" />

</RelativeLayout>

</layout>